syntax = "proto2";
package record.pb;

// Record represents a dht record that contains a value
// for a key value pair
message Record {
	// The key that references this record
	optional string key = 1;

	// The actual value this record is storing
	optional bytes value = 2;

	// hash of the authors public key
	optional string author = 3;

	// A PKI signature for the key+value+author
	optional bytes signature = 4;

	// Time the record was received, set by receiver
	optional string timeReceived = 5;
}
